--- a/assets/twoutput.css
+++ b/assets/twoutput.css
@@ -668,9 +668,9 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   border-radius: 0.25rem;
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(20 83 45 / var(--tw-border-opacity));
+  border-color: rgb(76 29 149 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -682,27 +682,63 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
 
 .btn:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
 }
 
 .btn:active {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
+  background-color: rgb(76 29 149 / var(--tw-bg-opacity));
 }
 
 :is(.dark .btn) {
   --tw-bg-opacity: 1;
-  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
 }
 
 :is(.dark .btn:hover) {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
+  background-color: rgb(76 29 149 / var(--tw-bg-opacity));
 }
 
 :is(.dark .btn:active) {
   --tw-bg-opacity: 1;
-  background-color: rgb(5 46 22 / var(--tw-bg-opacity));
+  background-color: rgb(46 16 101 / var(--tw-bg-opacity));
+}
+
+.link {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.link:hover {
+  text-decoration-line: underline;
+  --tw-brightness: brightness(.75);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.link:active {
+  --tw-brightness: brightness(.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.pagination {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  display: block;
+  list-style-type: none;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.pagination li {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  display: inline;
+}
+
+.pagination .currentPageNum {
+  font-weight: 700;
 }
 
 .fieldset {
@@ -712,8 +748,90 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   padding: 0.5rem;
 }
 
+.responsibleTable {
+  display: block;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable {
+    display: table;
+  }
+}
+
+.responsibleTable thead {
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable thead {
+    display: table-header-group;
+  }
+}
+
+.responsibleTable th {
+  position: absolute;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable th {
+    position: relative;
+    display: table-cell;
+  }
+}
+
+.responsibleTable tbody {
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable tbody {
+    display: table-row-group;
+  }
+}
+
+.responsibleTable tr {
+  display: block;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable tr {
+    display: table-row;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+
+.responsibleTable td {
+  display: block;
+}
+
+.responsibleTable td::before {
+  font-weight: 700;
+  --tw-content: attr(data-th)': ';
+  content: var(--tw-content);
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable td {
+    display: table-cell;
+  }
+
+  .responsibleTable td::before {
+    --tw-content: none;
+    content: var(--tw-content);
+  }
+}
+
 .invisible {
   visibility: hidden;
+}
+
+.static {
+  position: static;
 }
 
 .m-2 {
@@ -735,8 +853,13 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   margin-bottom: 0.5rem;
 }
 
-.mb-4 {
+.my-4 {
+  margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .ml-2 {
@@ -755,12 +878,36 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   margin-top: 1rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
 }
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-\[132px\] {
@@ -775,8 +922,20 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   height: 2rem;
 }
 
+.h-\[1em\] {
+  height: 1em;
+}
+
 .min-h-\[calc\(100vh-150px\)\] {
   min-height: calc(100vh - 150px);
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-\[2rem\] {
@@ -795,6 +954,14 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   width: 100%;
 }
 
+.w-\[1em\] {
+  width: 1em;
+}
+
+.min-w-0 {
+  min-width: 0px;
+}
+
 .max-w-\[500px\] {
   max-width: 500px;
 }
@@ -809,6 +976,16 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
 
 .grow {
   flex-grow: 1;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -843,6 +1020,15 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   border-radius: 0.25rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-neutral-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -861,6 +1047,10 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
 .bg-neutral-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(212 212 212 / var(--tw-bg-opacity));
+}
+
+.bg-violet-700\/50 {
+  background-color: rgb(109 40 217 / 0.5);
 }
 
 .bg-\[url\(\'pics\/sun\.svg\'\)\] {
@@ -900,13 +1090,26 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   padding-bottom: 1rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -918,9 +1121,18 @@ input[type='text'], input[type='password'], input[type='email'], input[type='sea
   font-weight: 700;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.invert {
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-\[background-image\] {
@@ -938,6 +1150,49 @@ html {
   font-size: 18px;
 }
 
+.file\:btn::file-selector-button {
+  min-width: 100px;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(76 29 149 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.file\:btn::file-selector-button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
+}
+
+.file\:btn::file-selector-button:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 29 149 / var(--tw-bg-opacity));
+}
+
+:is(.dark .file\:btn)::file-selector-button {
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
+}
+
+:is(.dark .file\:btn)::file-selector-button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 29 149 / var(--tw-bg-opacity));
+}
+
+:is(.dark .file\:btn)::file-selector-button:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 16 101 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-violet-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(109 40 217 / var(--tw-bg-opacity));
@@ -945,6 +1200,12 @@ html {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
+}
+
+.hover\:backdrop-brightness-75:hover {
+  --tw-backdrop-brightness: brightness(.75);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .active\:bg-violet-800:active {
@@ -976,6 +1237,11 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+:is(.dark .dark\:invert) {
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 @media (min-width: 768px) {
   .md\:h-auto {
     height: auto;
@@ -1004,5 +1270,9 @@ html {
   .lg\:mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 }
