--- a/input.css
+++ b/input.css
@@ -24,7 +24,7 @@
 
 @layer components
 {
-    .btn { @apply cursor-pointer bg-green-700 hover:bg-green-800 active:bg-green-900 px-2 py-1 text-white rounded border border-green-900 min-w-[100px] text-center dark:bg-green-800 dark:hover:bg-green-900 dark:active:bg-green-950 }
+    .btn { @apply cursor-pointer bg-violet-700 hover:bg-violet-800 active:bg-violet-900 px-2 py-1 text-white rounded border border-violet-900 min-w-[100px] text-center dark:bg-violet-800 dark:hover:bg-violet-900 dark:active:bg-violet-950 }
 
     .link { @apply mx-2 hover:brightness-75 hover:underline active:brightness-50 }
 
