--- a/input.css
+++ b/input.css
@@ -8,6 +8,7 @@
     * { font-family: sans-serif; }
     h1 { @apply uppercase font-bold text-4xl my-8 text-center dark:text-white }
     h2 { @apply font-bold text-3xl my-4 text-center dark:text-white }
+    h3 { @apply font-bold text-2xl my-2 text-left dark:text-white }
 
     body { @apply bg-white text-black dark:bg-zinc-900 dark:text-white transition-colors }
 
